--- a/pod-presets/pod-presets.yaml
+++ b/pod-presets/pod-presets.yaml
@@ -1,4 +1,4 @@
-apiVersion: settings.k8s.io/v1alpha1   # you might have to change this after PodPresets become stable 
+apiVersion: settings.k8s.io/v1alpha1   
 kind: PodPreset
 metadata:
   name: share-credential
