--- a/Django_K8S/deploy/kubernetes/postgres/volume.yaml
+++ b/Django_K8S/deploy/kubernetes/postgres/volume.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     type: local
 spec:
+  storageClassName: manual
   capacity:
     storage: 2Gi
-  storageClassName: standard
   accessModes:
     - ReadWriteMany
   hostPath:
