nodt create env variables for redis yet

--- a/Django_K8S/deploy/kubernetes/django/deployment.yaml
+++ b/Django_K8S/deploy/kubernetes/django/deployment.yaml
@@ -35,5 +35,5 @@ spec:
             - name: POSTGRES_HOST
               value: postgres-service
 
-            - name: REDIS_HOST
-              value: redis-service
+            # - name: REDIS_HOST
+            # value: redis-service
