--- a/Django_K8S/deploy/kubernetes/postgres/service.yaml
+++ b/Django_K8S/deploy/kubernetes/postgres/service.yaml
@@ -3,9 +3,6 @@ apiVersion: v1
 metadata:
   name: postgres-service
 spec:
-  selector:
-    app: postgres-container
-  ports:
-    - protocol: TCP
-      port: 5432
-      targetPort: 5432
+  type: ExternalName
+  externalName: kubernetes-django.cqrmhcjabvy2.eu-west-1.rds.amazonaws.com
+
